Upgrade to discord.py 2.0.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 dacite
 jsonschema
 
-discord.py @ git+https://github.com/Rapptz/discord.py@0e386ec2ccfa6b131ab0ebd782d1ccd50bf08470
+discord.py >= 2.0.0
