--- a/config/versions.ini
+++ b/config/versions.ini
@@ -1,6 +1,7 @@
 [Versions]
-version = 0.0.0
+version = 1.0.0
 python = 3.10.4
 discord.py = 2.0.0
+motor = 3.0.0
 dacite = 1.6.0
 jsonschema = 4.13.0
